2017-09-03  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.4.0 released.

        * Add support for MMC / SD card emulation in SPI mode (Philip Kendall
          and Sergio Baldoví).

        * Add class recognition for MLT files (Fredrick Meunier).

        * Various minor bug fixes/improvements:
          * Fix typo in libspectrum.txt (Martin M. S. Pedersen).
          * Additional unit tests for SZX reading/writing (Philip Kendall).

2017-07-31  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.3.6 released.

        * Fix Z80 snapshot writing when +D is enabled (thanks, Fredrick Meunier)
          (Sergio Baldoví).

        * Export pkgconfig file to publish library version (fixes bug #382)
          (Sergio Baldoví and Fredrick Meunier).

        * Fix offset of keyboard mappings in Z80 v3 snaphots (fixes bug #340)
          (Sergio Baldoví).

        * Various minor bug fixes/improvements:
          * Replace '*' in boolean context with '&&' in libspectrum_malloc0_n()
            (Sergio Baldoví).
          * Fix warning about missing atomic_lock()/atomic_unlock() declarations
            in gslock.c (Fredrick Meunier).

2017-07-02  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.3.5 released.

        * Add Multiface One/128/3 support (Sergio Baldoví).

        * Add self-inflating buffer for writing binary files (thanks, Patrik
          Rak) (Fredrick Meunier).

        * Add class recognition for SCR files (Fredrick Meunier).

        * Fix crash when saving CSW tapes (thanks, Nicholas Naime and Fredrick
          Meunier) (Sergio Baldoví).

        * Various minor bug fixes/improvements:
          * Add unit test for CSW writing (Fredrick Meunier).
          * Swich to using autoreconf (Fredrick Meunier).
          * Use silent builds by default (Fredrick Meunier).
          * Remove more const qualifiers from libspectrum_buffer API (Sergio
            Baldoví).